@@ -3,6 +3,8 @@ BakingTray ChangeLog
 Most commits and development should go in the dev branch (or a branch devoted to a specific feature).
 When mature, changes should be merged into master *as a merge commit*  and this changelog file updated. 
 
+XXX 
+- PMTs turn off automatically at the end of acquisition. 
 
 25th July 2017
 - USER: Basic resumption of previous acquisition now works but is not well tested yet.
@@ -20,7 +22,7 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 
 5th July 2017
 - Get rid of ScanImage user-functions. Everything now done in SIBT with listeners on the user-function notifiers.
-- Pressing "Abort" in ScanImage during tilescanning will now disarm SIBT
+- Pressing "Abort" in ScanImage during tile-scanning will now disarm SIBT
 - Stage coords shown in acq window
 
 4th July 2017
